edpoints done 4 now
